fixed h1 and further spacing issues. this time should be actually correct

--- a/reverse_style.css
+++ b/reverse_style.css
@@ -17,15 +17,14 @@ div {
 width: 750px;
 height: 600px;
 margin: 10px 20%;
-position:center;
 background-color: #F5F5DC;
 border:  dotted black;
-
+font-size: 15px;
 
 }
 
 nav {
-border-bottom: dotted black;
+border-bottom: dotted black  3px;
 text-align: center;
 
 }
@@ -33,23 +32,22 @@ text-align: center;
 
 h1 {
 
-font-size: 1em;
+font-size: 3em;
 font-style: italic;
 font-style: bold;
 font-family: impact;
-margin: 3px
-border-bottom: dotted black;
+margin-bottom: 0;
+margin-top: 0;
 text-align: center;
 
 
 }
  P {
-padding-left: 10px;
-padding-right: 10px;
+padding-left: 15px;
+padding-right: 15px;
 text-align: left;
 font-family: sans-serif;
-border: 15px 20%;
-margin-bottom: 0px;
+margin-bottom: 5px;
 
  }
 
@@ -67,11 +65,13 @@ font-size: 15px;
  }
 
  .poem {
+
+font-size: 19px;
 line-height: 1.5em;
 font-family: sans-serif;
 font-style: italic;
 text-align: center;
-margin-top: 0px
+margin-top: 0px;
  }
 
  span {
